# PyBreakingFix

./: CLAUDE.md  README.md  setup.cfg
pybreakingfix/: __main__.py  _data.py  _main.py
pybreakingfix/_plugins/: asyncio_methods.py  deprecated_methods.py  fractions_gcd.py  imports.py  removed_modules.py
tests/: main_test.py  string_helpers_test.py
tests/features/: asyncio_methods_test.py  collections_abc_test.py  deprecated_methods_test.py  fractions_gcd_test.py  removed_modules_test.py
